[package]
name = "cc1101"
version = "0.0.1"
authors = ["Ferdia McKeogh <chocol4te@users.noreply.github.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal-driver", "radio", "transceiver", "embedded-hal", "cc1101", "spi"]
description = "A platform agnostic driver to interface with the CC1101 (Sub-1GHz RF Transceiver)"
documentation = "https://docs.rs/cc1101"
license = "Apache-2.0"
repository = "https://github.com/chocol4te/cc1101"


[dependencies]
embedded-hal = "0.1.2"
